UserQuery.jj
PARSER_BEGIN(UserQuery)

public class UserQuery {
  public static void main(String args[]) {
    try {
      new UserQuery(System.in).Input();
    } catch (ParseException e) {
      System.out.println("[Exception] : "+e.getMessage());
      e.printStackTrace();    }
  }
}

PARSER_END(UserQuery)

TOKEN:{
  <GET: "GET">
| 
  <AND: "&&">
| 
  <OR: "||">
| 
  <EQUALS: "=" >
| 
  <NOTEQUALS: "!=" >
| 
  <NUM: (["0"-"9"])* >
| 
  <SPACE : " " >}

void Input():
{}
{
  < GET > Clauses() ("\n"|"\r")*
  {System.out.println("PARSED");}}

void Clauses():
{}
{
  <SPACE> ( < NUM >)}
